@@ -7,6 +7,7 @@ NEWS
   * [mod_proxy] remove debug log line from error log (fixes #2659)
   * [mod_dirlisting] fix dir-listing.set-footer not showing
   * fix out-of-filedescriptors when uploading "large" files (fixes #2660, thx rmilecki)
+  * increase upload temporary chunk file size from 1MB to 16MB
 
 - 1.4.36 - 2015-07-26
   * use keep-alive timeout while waiting for HTTP headers; use always the read timeout while waiting for the HTTP body
